# thermal_conductivity_code

./: LAMMPS_to_GULP.py  LICENSE.md  README.md  Vijx.txt  Vijy.txt  Vijz.txt  calculate_Sij.ipynb  calculate_Vij.ipynb  calculate_Vij_mic_version.ipynb  find_nearest.py  gulp.gin  gulp.gout  setup.cfg  thermal_conductivity_AF.py  using_pythonmodule.ipynb
aGr_test/: frequency_symmetrized_fc.txt  kappa_out_lammps-regular  lammps_kappa.py  optimized.vasp  setup.yaml
aSi512-GULP-LAMMPS-compare/: calculation.ipynb  compare_force_constant.ipynb  confirm_structure.py  diagonalization.ipynb  make_GULP_input.py  make_LAMMPS_data.py
aSi512_GULP/: pythonmodule.ipynb  test.py  thermal_conductivity_AF.py  using_python_module.ipynb
aSi512_LAMMPS/: LAMMPS_phonon.py  phonopy.ipynb
aSi512_test/: IPR_Si512.ipynb  dsf.ipynb  dsf_1728.py  dsf_1728_test.ipynb  dsf_1728_using_module.ipynb  dsf_4096.ipynb  dsf_4096.py  dsf_4096_plot.ipynb  dsf_4096_test.ipynb  dsf_4096_using_module.ipynb  dsf_4096_v3.py  dsf_512.ipynb  dsf_cSi.ipynb  gulp.gin  gulp.gout  in.lammps  kappa_out  lammps_kappa.ipynb  lammps_kappa.py  lammps_kappa_THz.ipynb  lammps_resolved.ipynb  optimized.vasp  phonopy_kappa.ipynb  phonopy_kappa.py  postprocess.ipynb  setup.yaml  setup_phonopy.yaml
cristal_Si_GULP/: FORCE_CONSTANTS_2ND  calculate_Sij.ipynb  calculate_Vij.ipynb  using_pythonmodule.ipynb
cristal_Si_LAMMPS/: Si_LAMMPS.py  Si_phonopy.ipynb  force_constants.txt  in.lammps  in.phonon
pyAF/: constants.py  data_parse.py  interface.py  nearest.py  postprocess.py  thermal_conductivity_AF.py
src/: __init__.py  (+4 more)
(+3 files in other folders)
