[metadata]
name = thermal_conductivity_AF
version = 0.0
url = https://github.com/eminamitani/thermal_conductivity_code.git
author = Emi Minamitani
author_email = eminamitani@ims.ac.jp
license = MIT
description = thermal_conductivity_AF: modules to evaluate thermal conductivity in disordered system from Allen-Feldman theory
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
  ase
  numpy
  tqdm
  pyyaml