[metadata]
name = pyAF
version = 0.1
url = https://github.com/eminamitani/thermal_conductivity_code.git
author = Emi Minamitani
author_email = eminamitani@ims.ac.jp
license = MIT
description = pyAF: python modules to evaluate thermal conductivity in disordered system from Allen-Feldman theory
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
  ase
  numpy
  tqdm
  pyyaml
  phonopy